fix(SS-52): adicionar suporte à atualização de senha no endpoint de atualização de usuário
